// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SocialLinks snapshots > matches the icons variant snapshot 1`] = `
<ul
  aria-label="Official social profiles"
  class="flex flex-wrap items-center gap-3"
>
  <li>
    <a
      aria-label="GitHub (opens in a new tab)"
      class="inline-flex h-9 w-9 items-center justify-center rounded-md border border-border/60 text-muted-foreground transition-all duration-200 hover:-translate-y-0.5 hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://github.com/RRLabsOnline"
      rel="noopener noreferrer"
      target="_blank"
      title="GitHub — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-github h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
        />
        <path
          d="M9 18c-4.51 2-5-2-7-2"
        />
      </svg>
      <span
        class="sr-only"
      >
        GitHub
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="LinkedIn (opens in a new tab)"
      class="inline-flex h-9 w-9 items-center justify-center rounded-md border border-border/60 text-muted-foreground transition-all duration-200 hover:-translate-y-0.5 hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://www.linkedin.com/company/rrlabsonline"
      rel="noopener noreferrer"
      target="_blank"
      title="LinkedIn — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-linkedin h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
        />
        <rect
          height="12"
          width="4"
          x="2"
          y="9"
        />
        <circle
          cx="4"
          cy="4"
          r="2"
        />
      </svg>
      <span
        class="sr-only"
      >
        LinkedIn
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="X (Twitter) (opens in a new tab)"
      class="inline-flex h-9 w-9 items-center justify-center rounded-md border border-border/60 text-muted-foreground transition-all duration-200 hover:-translate-y-0.5 hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://x.com/rrlabsonline"
      rel="noopener noreferrer"
      target="_blank"
      title="X (Twitter) — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-twitter h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z"
        />
      </svg>
      <span
        class="sr-only"
      >
        X (Twitter)
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="Facebook (opens in a new tab)"
      class="inline-flex h-9 w-9 items-center justify-center rounded-md border border-border/60 text-muted-foreground transition-all duration-200 hover:-translate-y-0.5 hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://www.facebook.com/rrlabsonline"
      rel="noopener noreferrer"
      target="_blank"
      title="Facebook — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-facebook h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"
        />
      </svg>
      <span
        class="sr-only"
      >
        Facebook
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="Instagram (opens in a new tab)"
      class="inline-flex h-9 w-9 items-center justify-center rounded-md border border-border/60 text-muted-foreground transition-all duration-200 hover:-translate-y-0.5 hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://www.instagram.com/rrlabsonline"
      rel="noopener noreferrer"
      target="_blank"
      title="Instagram — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-instagram h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="20"
          rx="5"
          ry="5"
          width="20"
          x="2"
          y="2"
        />
        <path
          d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"
        />
        <line
          x1="17.5"
          x2="17.51"
          y1="6.5"
          y2="6.5"
        />
      </svg>
      <span
        class="sr-only"
      >
        Instagram
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="Threads (opens in a new tab)"
      class="inline-flex h-9 w-9 items-center justify-center rounded-md border border-border/60 text-muted-foreground transition-all duration-200 hover:-translate-y-0.5 hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://www.threads.com/@rrlabsonline"
      rel="noopener noreferrer"
      target="_blank"
      title="Threads — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="h-4 w-4"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12.186 24h-.007c-3.581-.024-6.334-1.205-8.184-3.509C2.35 18.44 1.5 15.586 1.472 12.01v-.02c.028-3.576.878-6.43 2.523-8.482C5.845 1.205 8.598.024 12.179 0h.014c2.746.02 5.043.725 6.826 2.098 1.677 1.29 2.858 3.13 3.509 5.467l-2.04.569c-1.104-3.96-3.898-5.984-8.312-6.015-2.91.022-5.11.936-6.54 2.717-1.34 1.664-2.03 4.07-2.058 7.152.028 3.082.72 5.488 2.058 7.152 1.43 1.783 3.63 2.696 6.54 2.717 2.625-.02 4.362-.658 5.808-2.114 1.647-1.66 1.618-3.7 1.09-4.918-.31-.716-.873-1.31-1.634-1.75-.192 1.352-.622 2.446-1.29 3.272-.895 1.107-2.164 1.712-3.77 1.797-1.216.065-2.387-.223-3.297-.812-1.075-.696-1.706-1.76-1.774-2.997-.14-2.539 1.86-4.362 4.978-4.54.917-.052 1.775-.011 2.552.121-.075-.632-.29-1.113-.65-1.437-.5-.451-1.216-.679-2.133-.679h-.028c-1.144.017-2.243.417-3.09 1.126l-1.208-1.804c1.209-1.001 2.706-1.552 4.276-1.575h.048c2.618 0 4.152 1.61 4.304 4.404.087.05.174.102.26.157.926.582 1.632 1.412 2.037 2.401.567 1.387.618 3.664-1.288 5.586C17.72 22.97 15.484 24 12.186 24zm.038-11.386c-.216 0-.436.006-.66.02-2.096.118-3.156 1.024-3.083 2.377.098 1.78 2.05 2.011 2.965 1.962.995-.053 2.647-.442 2.955-3.795a10.16 10.16 0 0 0-2.177-.264z"
        />
      </svg>
      <span
        class="sr-only"
      >
        Threads
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="YouTube (opens in a new tab)"
      class="inline-flex h-9 w-9 items-center justify-center rounded-md border border-border/60 text-muted-foreground transition-all duration-200 hover:-translate-y-0.5 hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://www.youtube.com/@rrlabsonline"
      rel="noopener noreferrer"
      target="_blank"
      title="YouTube — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-youtube h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2.5 17a24.12 24.12 0 0 1 0-10 2 2 0 0 1 1.4-1.4 49.56 49.56 0 0 1 16.2 0A2 2 0 0 1 21.5 7a24.12 24.12 0 0 1 0 10 2 2 0 0 1-1.4 1.4 49.55 49.55 0 0 1-16.2 0A2 2 0 0 1 2.5 17"
        />
        <path
          d="m10 15 5-3-5-3z"
        />
      </svg>
      <span
        class="sr-only"
      >
        YouTube
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="Crunchbase (opens in a new tab)"
      class="inline-flex h-9 w-9 items-center justify-center rounded-md border border-border/60 text-muted-foreground transition-all duration-200 hover:-translate-y-0.5 hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://www.crunchbase.com/organization/revenue-recovery-labs"
      rel="noopener noreferrer"
      target="_blank"
      title="Crunchbase — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="h-4 w-4"
        fill="none"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <rect
          height="20"
          rx="4"
          stroke="currentColor"
          stroke-width="1.6"
          width="20"
          x="2"
          y="2"
        />
        <text
          fill="currentColor"
          font-family="ui-sans-serif, system-ui, sans-serif"
          font-size="10"
          font-weight="800"
          text-anchor="middle"
          x="12"
          y="16"
        >
          cb
        </text>
      </svg>
      <span
        class="sr-only"
      >
        Crunchbase
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="G2 (opens in a new tab)"
      class="inline-flex h-9 w-9 items-center justify-center rounded-md border border-border/60 text-muted-foreground transition-all duration-200 hover:-translate-y-0.5 hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://www.g2.com/products/revenue-recovery-labs"
      rel="noopener noreferrer"
      target="_blank"
      title="G2 — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="h-4 w-4"
        fill="none"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <circle
          cx="12"
          cy="12"
          r="11"
          stroke="currentColor"
          stroke-width="1.6"
        />
        <path
          d="M8.2 9.2a3 3 0 1 1 4.6 3.5L8 17h5.4"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.6"
        />
        <text
          fill="currentColor"
          font-family="ui-sans-serif, system-ui, sans-serif"
          font-size="8"
          font-weight="700"
          x="14.6"
          y="16.4"
        >
          2
        </text>
      </svg>
      <span
        class="sr-only"
      >
        G2
      </span>
    </a>
  </li>
</ul>
`;

exports[`SocialLinks snapshots > matches the icons variant with a custom className 1`] = `
<ul
  aria-label="Official social profiles"
  class="flex flex-wrap items-center justify-center gap-6"
>
  <li>
    <a
      aria-label="GitHub (opens in a new tab)"
      class="inline-flex h-9 w-9 items-center justify-center rounded-md border border-border/60 text-muted-foreground transition-all duration-200 hover:-translate-y-0.5 hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://github.com/RRLabsOnline"
      rel="noopener noreferrer"
      target="_blank"
      title="GitHub — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-github h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
        />
        <path
          d="M9 18c-4.51 2-5-2-7-2"
        />
      </svg>
      <span
        class="sr-only"
      >
        GitHub
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="LinkedIn (opens in a new tab)"
      class="inline-flex h-9 w-9 items-center justify-center rounded-md border border-border/60 text-muted-foreground transition-all duration-200 hover:-translate-y-0.5 hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://www.linkedin.com/company/rrlabsonline"
      rel="noopener noreferrer"
      target="_blank"
      title="LinkedIn — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-linkedin h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
        />
        <rect
          height="12"
          width="4"
          x="2"
          y="9"
        />
        <circle
          cx="4"
          cy="4"
          r="2"
        />
      </svg>
      <span
        class="sr-only"
      >
        LinkedIn
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="X (Twitter) (opens in a new tab)"
      class="inline-flex h-9 w-9 items-center justify-center rounded-md border border-border/60 text-muted-foreground transition-all duration-200 hover:-translate-y-0.5 hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://x.com/rrlabsonline"
      rel="noopener noreferrer"
      target="_blank"
      title="X (Twitter) — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-twitter h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z"
        />
      </svg>
      <span
        class="sr-only"
      >
        X (Twitter)
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="Facebook (opens in a new tab)"
      class="inline-flex h-9 w-9 items-center justify-center rounded-md border border-border/60 text-muted-foreground transition-all duration-200 hover:-translate-y-0.5 hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://www.facebook.com/rrlabsonline"
      rel="noopener noreferrer"
      target="_blank"
      title="Facebook — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-facebook h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"
        />
      </svg>
      <span
        class="sr-only"
      >
        Facebook
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="Instagram (opens in a new tab)"
      class="inline-flex h-9 w-9 items-center justify-center rounded-md border border-border/60 text-muted-foreground transition-all duration-200 hover:-translate-y-0.5 hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://www.instagram.com/rrlabsonline"
      rel="noopener noreferrer"
      target="_blank"
      title="Instagram — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-instagram h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="20"
          rx="5"
          ry="5"
          width="20"
          x="2"
          y="2"
        />
        <path
          d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"
        />
        <line
          x1="17.5"
          x2="17.51"
          y1="6.5"
          y2="6.5"
        />
      </svg>
      <span
        class="sr-only"
      >
        Instagram
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="Threads (opens in a new tab)"
      class="inline-flex h-9 w-9 items-center justify-center rounded-md border border-border/60 text-muted-foreground transition-all duration-200 hover:-translate-y-0.5 hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://www.threads.com/@rrlabsonline"
      rel="noopener noreferrer"
      target="_blank"
      title="Threads — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="h-4 w-4"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12.186 24h-.007c-3.581-.024-6.334-1.205-8.184-3.509C2.35 18.44 1.5 15.586 1.472 12.01v-.02c.028-3.576.878-6.43 2.523-8.482C5.845 1.205 8.598.024 12.179 0h.014c2.746.02 5.043.725 6.826 2.098 1.677 1.29 2.858 3.13 3.509 5.467l-2.04.569c-1.104-3.96-3.898-5.984-8.312-6.015-2.91.022-5.11.936-6.54 2.717-1.34 1.664-2.03 4.07-2.058 7.152.028 3.082.72 5.488 2.058 7.152 1.43 1.783 3.63 2.696 6.54 2.717 2.625-.02 4.362-.658 5.808-2.114 1.647-1.66 1.618-3.7 1.09-4.918-.31-.716-.873-1.31-1.634-1.75-.192 1.352-.622 2.446-1.29 3.272-.895 1.107-2.164 1.712-3.77 1.797-1.216.065-2.387-.223-3.297-.812-1.075-.696-1.706-1.76-1.774-2.997-.14-2.539 1.86-4.362 4.978-4.54.917-.052 1.775-.011 2.552.121-.075-.632-.29-1.113-.65-1.437-.5-.451-1.216-.679-2.133-.679h-.028c-1.144.017-2.243.417-3.09 1.126l-1.208-1.804c1.209-1.001 2.706-1.552 4.276-1.575h.048c2.618 0 4.152 1.61 4.304 4.404.087.05.174.102.26.157.926.582 1.632 1.412 2.037 2.401.567 1.387.618 3.664-1.288 5.586C17.72 22.97 15.484 24 12.186 24zm.038-11.386c-.216 0-.436.006-.66.02-2.096.118-3.156 1.024-3.083 2.377.098 1.78 2.05 2.011 2.965 1.962.995-.053 2.647-.442 2.955-3.795a10.16 10.16 0 0 0-2.177-.264z"
        />
      </svg>
      <span
        class="sr-only"
      >
        Threads
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="YouTube (opens in a new tab)"
      class="inline-flex h-9 w-9 items-center justify-center rounded-md border border-border/60 text-muted-foreground transition-all duration-200 hover:-translate-y-0.5 hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://www.youtube.com/@rrlabsonline"
      rel="noopener noreferrer"
      target="_blank"
      title="YouTube — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-youtube h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2.5 17a24.12 24.12 0 0 1 0-10 2 2 0 0 1 1.4-1.4 49.56 49.56 0 0 1 16.2 0A2 2 0 0 1 21.5 7a24.12 24.12 0 0 1 0 10 2 2 0 0 1-1.4 1.4 49.55 49.55 0 0 1-16.2 0A2 2 0 0 1 2.5 17"
        />
        <path
          d="m10 15 5-3-5-3z"
        />
      </svg>
      <span
        class="sr-only"
      >
        YouTube
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="Crunchbase (opens in a new tab)"
      class="inline-flex h-9 w-9 items-center justify-center rounded-md border border-border/60 text-muted-foreground transition-all duration-200 hover:-translate-y-0.5 hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://www.crunchbase.com/organization/revenue-recovery-labs"
      rel="noopener noreferrer"
      target="_blank"
      title="Crunchbase — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="h-4 w-4"
        fill="none"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <rect
          height="20"
          rx="4"
          stroke="currentColor"
          stroke-width="1.6"
          width="20"
          x="2"
          y="2"
        />
        <text
          fill="currentColor"
          font-family="ui-sans-serif, system-ui, sans-serif"
          font-size="10"
          font-weight="800"
          text-anchor="middle"
          x="12"
          y="16"
        >
          cb
        </text>
      </svg>
      <span
        class="sr-only"
      >
        Crunchbase
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="G2 (opens in a new tab)"
      class="inline-flex h-9 w-9 items-center justify-center rounded-md border border-border/60 text-muted-foreground transition-all duration-200 hover:-translate-y-0.5 hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://www.g2.com/products/revenue-recovery-labs"
      rel="noopener noreferrer"
      target="_blank"
      title="G2 — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="h-4 w-4"
        fill="none"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <circle
          cx="12"
          cy="12"
          r="11"
          stroke="currentColor"
          stroke-width="1.6"
        />
        <path
          d="M8.2 9.2a3 3 0 1 1 4.6 3.5L8 17h5.4"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.6"
        />
        <text
          fill="currentColor"
          font-family="ui-sans-serif, system-ui, sans-serif"
          font-size="8"
          font-weight="700"
          x="14.6"
          y="16.4"
        >
          2
        </text>
      </svg>
      <span
        class="sr-only"
      >
        G2
      </span>
    </a>
  </li>
</ul>
`;

exports[`SocialLinks snapshots > matches the list variant snapshot 1`] = `
<ul
  aria-label="Official social profiles"
  class="grid gap-2 sm:grid-cols-2"
>
  <li>
    <a
      aria-label="GitHub (opens in a new tab)"
      class="group flex items-center gap-3 rounded-lg border border-border/60 bg-card/50 p-3 text-sm text-muted-foreground backdrop-blur transition-colors hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://github.com/RRLabsOnline"
      rel="noopener noreferrer"
      target="_blank"
      title="GitHub — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-github h-5 w-5 shrink-0 text-primary"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
        />
        <path
          d="M9 18c-4.51 2-5-2-7-2"
        />
      </svg>
      <span
        class="flex min-w-0 flex-1 flex-col"
      >
        <span
          class="font-medium text-foreground"
        >
          GitHub
        </span>
        <span
          class="truncate text-xs"
        >
          github.com/RRLabsOnline
        </span>
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="LinkedIn (opens in a new tab)"
      class="group flex items-center gap-3 rounded-lg border border-border/60 bg-card/50 p-3 text-sm text-muted-foreground backdrop-blur transition-colors hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://www.linkedin.com/company/rrlabsonline"
      rel="noopener noreferrer"
      target="_blank"
      title="LinkedIn — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-linkedin h-5 w-5 shrink-0 text-primary"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
        />
        <rect
          height="12"
          width="4"
          x="2"
          y="9"
        />
        <circle
          cx="4"
          cy="4"
          r="2"
        />
      </svg>
      <span
        class="flex min-w-0 flex-1 flex-col"
      >
        <span
          class="font-medium text-foreground"
        >
          LinkedIn
        </span>
        <span
          class="truncate text-xs"
        >
          www.linkedin.com/company/rrlabsonline
        </span>
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="X (Twitter) (opens in a new tab)"
      class="group flex items-center gap-3 rounded-lg border border-border/60 bg-card/50 p-3 text-sm text-muted-foreground backdrop-blur transition-colors hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://x.com/rrlabsonline"
      rel="noopener noreferrer"
      target="_blank"
      title="X (Twitter) — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-twitter h-5 w-5 shrink-0 text-primary"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z"
        />
      </svg>
      <span
        class="flex min-w-0 flex-1 flex-col"
      >
        <span
          class="font-medium text-foreground"
        >
          X (Twitter)
        </span>
        <span
          class="truncate text-xs"
        >
          x.com/rrlabsonline
        </span>
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="Facebook (opens in a new tab)"
      class="group flex items-center gap-3 rounded-lg border border-border/60 bg-card/50 p-3 text-sm text-muted-foreground backdrop-blur transition-colors hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://www.facebook.com/rrlabsonline"
      rel="noopener noreferrer"
      target="_blank"
      title="Facebook — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-facebook h-5 w-5 shrink-0 text-primary"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"
        />
      </svg>
      <span
        class="flex min-w-0 flex-1 flex-col"
      >
        <span
          class="font-medium text-foreground"
        >
          Facebook
        </span>
        <span
          class="truncate text-xs"
        >
          www.facebook.com/rrlabsonline
        </span>
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="Instagram (opens in a new tab)"
      class="group flex items-center gap-3 rounded-lg border border-border/60 bg-card/50 p-3 text-sm text-muted-foreground backdrop-blur transition-colors hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://www.instagram.com/rrlabsonline"
      rel="noopener noreferrer"
      target="_blank"
      title="Instagram — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-instagram h-5 w-5 shrink-0 text-primary"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="20"
          rx="5"
          ry="5"
          width="20"
          x="2"
          y="2"
        />
        <path
          d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"
        />
        <line
          x1="17.5"
          x2="17.51"
          y1="6.5"
          y2="6.5"
        />
      </svg>
      <span
        class="flex min-w-0 flex-1 flex-col"
      >
        <span
          class="font-medium text-foreground"
        >
          Instagram
        </span>
        <span
          class="truncate text-xs"
        >
          www.instagram.com/rrlabsonline
        </span>
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="Threads (opens in a new tab)"
      class="group flex items-center gap-3 rounded-lg border border-border/60 bg-card/50 p-3 text-sm text-muted-foreground backdrop-blur transition-colors hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://www.threads.com/@rrlabsonline"
      rel="noopener noreferrer"
      target="_blank"
      title="Threads — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="h-5 w-5 shrink-0 text-primary"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12.186 24h-.007c-3.581-.024-6.334-1.205-8.184-3.509C2.35 18.44 1.5 15.586 1.472 12.01v-.02c.028-3.576.878-6.43 2.523-8.482C5.845 1.205 8.598.024 12.179 0h.014c2.746.02 5.043.725 6.826 2.098 1.677 1.29 2.858 3.13 3.509 5.467l-2.04.569c-1.104-3.96-3.898-5.984-8.312-6.015-2.91.022-5.11.936-6.54 2.717-1.34 1.664-2.03 4.07-2.058 7.152.028 3.082.72 5.488 2.058 7.152 1.43 1.783 3.63 2.696 6.54 2.717 2.625-.02 4.362-.658 5.808-2.114 1.647-1.66 1.618-3.7 1.09-4.918-.31-.716-.873-1.31-1.634-1.75-.192 1.352-.622 2.446-1.29 3.272-.895 1.107-2.164 1.712-3.77 1.797-1.216.065-2.387-.223-3.297-.812-1.075-.696-1.706-1.76-1.774-2.997-.14-2.539 1.86-4.362 4.978-4.54.917-.052 1.775-.011 2.552.121-.075-.632-.29-1.113-.65-1.437-.5-.451-1.216-.679-2.133-.679h-.028c-1.144.017-2.243.417-3.09 1.126l-1.208-1.804c1.209-1.001 2.706-1.552 4.276-1.575h.048c2.618 0 4.152 1.61 4.304 4.404.087.05.174.102.26.157.926.582 1.632 1.412 2.037 2.401.567 1.387.618 3.664-1.288 5.586C17.72 22.97 15.484 24 12.186 24zm.038-11.386c-.216 0-.436.006-.66.02-2.096.118-3.156 1.024-3.083 2.377.098 1.78 2.05 2.011 2.965 1.962.995-.053 2.647-.442 2.955-3.795a10.16 10.16 0 0 0-2.177-.264z"
        />
      </svg>
      <span
        class="flex min-w-0 flex-1 flex-col"
      >
        <span
          class="font-medium text-foreground"
        >
          Threads
        </span>
        <span
          class="truncate text-xs"
        >
          www.threads.com/@rrlabsonline
        </span>
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="YouTube (opens in a new tab)"
      class="group flex items-center gap-3 rounded-lg border border-border/60 bg-card/50 p-3 text-sm text-muted-foreground backdrop-blur transition-colors hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://www.youtube.com/@rrlabsonline"
      rel="noopener noreferrer"
      target="_blank"
      title="YouTube — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-youtube h-5 w-5 shrink-0 text-primary"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2.5 17a24.12 24.12 0 0 1 0-10 2 2 0 0 1 1.4-1.4 49.56 49.56 0 0 1 16.2 0A2 2 0 0 1 21.5 7a24.12 24.12 0 0 1 0 10 2 2 0 0 1-1.4 1.4 49.55 49.55 0 0 1-16.2 0A2 2 0 0 1 2.5 17"
        />
        <path
          d="m10 15 5-3-5-3z"
        />
      </svg>
      <span
        class="flex min-w-0 flex-1 flex-col"
      >
        <span
          class="font-medium text-foreground"
        >
          YouTube
        </span>
        <span
          class="truncate text-xs"
        >
          www.youtube.com/@rrlabsonline
        </span>
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="Crunchbase (opens in a new tab)"
      class="group flex items-center gap-3 rounded-lg border border-border/60 bg-card/50 p-3 text-sm text-muted-foreground backdrop-blur transition-colors hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://www.crunchbase.com/organization/revenue-recovery-labs"
      rel="noopener noreferrer"
      target="_blank"
      title="Crunchbase — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="h-5 w-5 shrink-0 text-primary"
        fill="none"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <rect
          height="20"
          rx="4"
          stroke="currentColor"
          stroke-width="1.6"
          width="20"
          x="2"
          y="2"
        />
        <text
          fill="currentColor"
          font-family="ui-sans-serif, system-ui, sans-serif"
          font-size="10"
          font-weight="800"
          text-anchor="middle"
          x="12"
          y="16"
        >
          cb
        </text>
      </svg>
      <span
        class="flex min-w-0 flex-1 flex-col"
      >
        <span
          class="font-medium text-foreground"
        >
          Crunchbase
        </span>
        <span
          class="truncate text-xs"
        >
          www.crunchbase.com/organization/revenue-recovery-labs
        </span>
      </span>
    </a>
  </li>
  <li>
    <a
      aria-label="G2 (opens in a new tab)"
      class="group flex items-center gap-3 rounded-lg border border-border/60 bg-card/50 p-3 text-sm text-muted-foreground backdrop-blur transition-colors hover:border-primary/50 hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background"
      href="https://www.g2.com/products/revenue-recovery-labs"
      rel="noopener noreferrer"
      target="_blank"
      title="G2 — opens in a new tab"
    >
      <svg
        aria-hidden="true"
        class="h-5 w-5 shrink-0 text-primary"
        fill="none"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <circle
          cx="12"
          cy="12"
          r="11"
          stroke="currentColor"
          stroke-width="1.6"
        />
        <path
          d="M8.2 9.2a3 3 0 1 1 4.6 3.5L8 17h5.4"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.6"
        />
        <text
          fill="currentColor"
          font-family="ui-sans-serif, system-ui, sans-serif"
          font-size="8"
          font-weight="700"
          x="14.6"
          y="16.4"
        >
          2
        </text>
      </svg>
      <span
        class="flex min-w-0 flex-1 flex-col"
      >
        <span
          class="font-medium text-foreground"
        >
          G2
        </span>
        <span
          class="truncate text-xs"
        >
          www.g2.com/products/revenue-recovery-labs
        </span>
      </span>
    </a>
  </li>
</ul>
`;
